--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: frontend
-          environment_name: Frontend-env
+          application_name: ReactApp
+          environment_name: ReactApp-env
           existing_bucket_name: elasticbeanstalk-us-east-1-891377339446
           use_existing_version_if_available: true
           region: us-east-1
